Fixed some spacing in the "about" component

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -172,7 +172,7 @@
 ********* About ***********
 **************************/
 .bio-wrapper {
-  margin: 103px auto;
+  margin: 103px auto 50px;
   width: 90%;
   max-width: 500px;
   padding: 10px;
