--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -163,7 +163,7 @@
 **************************/
 
 .bio-wrapper {
-  margin: 103px auto;
+  margin: 103px auto 50px;
   width: 90%;
   max-width: 500px;
   padding: 10px;
